# aptparu

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: main.cpp  main.hpp
subprojects/: argparse.wrap
